// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`--builder-components keeps builder components 1`] = `
"import * as React from \\"react\\";

function MyComponent(props) {
  return (
    <Columns
      stackColumnsAt=\\"tablet\\"
      space={36}
      reverseColumnsWhenStacked={false}
      css={{
        display: \\"flex\\",
        flexDirection: \\"column\\",
        alignItems: \\"stretch\\",
        position: \\"relative\\",
        flexShrink: \\"0\\",
        boxSizing: \\"border-box\\",
        marginTop: \\"2.34375px\\",
        paddingLeft: \\"0px\\",
        paddingRight: \\"0px\\",
      }}
    >
      <Column width={}>
        <Image
          image=\\"https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F8e096f01b00343dca3952d645f7ae024?width=998&height=1000\\"
          backgroundPosition=\\"center\\"
          backgroundSize=\\"cover\\"
          srcset=\\"https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F8e096f01b00343dca3952d645f7ae024?width=100&height=1000 100w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F8e096f01b00343dca3952d645f7ae024?width=200&height=1000 200w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F8e096f01b00343dca3952d645f7ae024?width=400&height=1000 400w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F8e096f01b00343dca3952d645f7ae024?width=800&height=1000 800w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F8e096f01b00343dca3952d645f7ae024?width=1200&height=1000 1200w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F8e096f01b00343dca3952d645f7ae024?width=1600&height=1000 1600w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F8e096f01b00343dca3952d645f7ae024?width=2000&height=1000 2000w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F8e096f01b00343dca3952d645f7ae024?width=998&height=1000 998w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F8e096f01b00343dca3952d645f7ae024?width=638&height=1000 638w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F8e096f01b00343dca3952d645f7ae024?width=376&height=1000 376w\\"
          sizes=\\"(max-width: 638px) 100vw, 27vw\\"
          aspectRatio={0.7004048582995948}
          lazy
          height={749}
          width={998}
          css={{
            display: \\"flex\\",
            flexDirection: \\"column\\",
            alignItems: \\"stretch\\",
            flexShrink: \\"0\\",
            position: \\"relative\\",
            textAlign: \\"center\\",
            lineHeight: \\"normal\\",
            height: \\"auto\\",
          }}
        />
        <div
          css={{
            display: \\"flex\\",
            flexDirection: \\"column\\",
            alignItems: \\"stretch\\",
            position: \\"relative\\",
            flexShrink: \\"0\\",
            boxSizing: \\"border-box\\",
            marginTop: \\"9px\\",
            marginBottom: \\"auto\\",
            paddingBottom: \\"17px\\",
            paddingTop: \\"17px\\",
            \\"@media (max-width: 991px)\\": {
              paddingBottom: \\"49px\\",
            },
          }}
        >
          <div
            css={{
              display: \\"flex\\",
              flexDirection: \\"column\\",
              alignItems: \\"stretch\\",
              flexShrink: \\"0\\",
              position: \\"relative\\",
              marginTop: \\"-1.65625px\\",
              textAlign: \\"center\\",
              lineHeight: \\"normal\\",
              height: \\"auto\\",
              fontSize: \\"24px\\",
              \\"@media (max-width: 991px)\\": {
                marginTop: \\"1.34375px\\",
                textAlign: \\"center\\",
              },
              \\"@media (max-width: 640px)\\": {
                fontSize: \\"25px\\",
              },
            }}
          >
            <p>Something Great to Say</p>
          </div>
          <div
            css={{
              display: \\"flex\\",
              flexDirection: \\"column\\",
              alignItems: \\"stretch\\",
              flexShrink: \\"0\\",
              position: \\"relative\\",
              marginTop: \\"14.59375px\\",
              textAlign: \\"center\\",
              lineHeight: \\"normal\\",
              height: \\"auto\\",
              fontSize: \\"15px\\",
              color: \\"rgba(86, 86, 86, 1)\\",
              \\"@media (max-width: 991px)\\": {
                textAlign: \\"center\\",
              },
              \\"@media (max-width: 640px)\\": {
                fontSize: \\"15px\\",
              },
            }}
          >
            <p>
              Some more great things to elaborate on that wonderful things you
              have to tell your audience
            </p>
          </div>
        </div>
      </Column>
      <Column width={}>
        <Image
          image=\\"https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F70c33c597e9946e9a79ab99ad9a999d3?width=998&height=1000\\"
          backgroundPosition=\\"center\\"
          backgroundSize=\\"cover\\"
          srcset=\\"https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F70c33c597e9946e9a79ab99ad9a999d3?width=100&height=1000 100w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F70c33c597e9946e9a79ab99ad9a999d3?width=200&height=1000 200w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F70c33c597e9946e9a79ab99ad9a999d3?width=400&height=1000 400w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F70c33c597e9946e9a79ab99ad9a999d3?width=800&height=1000 800w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F70c33c597e9946e9a79ab99ad9a999d3?width=1200&height=1000 1200w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F70c33c597e9946e9a79ab99ad9a999d3?width=1600&height=1000 1600w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F70c33c597e9946e9a79ab99ad9a999d3?width=2000&height=1000 2000w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F70c33c597e9946e9a79ab99ad9a999d3?width=998&height=1000 998w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F70c33c597e9946e9a79ab99ad9a999d3?width=638&height=1000 638w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F70c33c597e9946e9a79ab99ad9a999d3?width=376&height=1000 376w\\"
          sizes=\\"(max-width: 638px) 100vw, 27vw\\"
          aspectRatio={0.7004048582995948}
          lazy
          height={665}
          width={998}
          css={{
            display: \\"flex\\",
            flexDirection: \\"column\\",
            alignItems: \\"stretch\\",
            flexShrink: \\"0\\",
            position: \\"relative\\",
            textAlign: \\"center\\",
            lineHeight: \\"normal\\",
            height: \\"auto\\",
            \\"@media (max-width: 991px)\\": {
              contentVisibility: \\"auto\\",
              containIntrinsicSize: \\"699px\\",
            },
          }}
        />
        <div
          css={{
            display: \\"flex\\",
            flexDirection: \\"column\\",
            alignItems: \\"stretch\\",
            position: \\"relative\\",
            flexShrink: \\"0\\",
            boxSizing: \\"border-box\\",
            marginTop: \\"9px\\",
            marginBottom: \\"auto\\",
            paddingBottom: \\"17px\\",
            paddingTop: \\"17px\\",
            \\"@media (max-width: 991px)\\": {
              paddingBottom: \\"49px\\",
              contentVisibility: \\"auto\\",
              containIntrinsicSize: \\"92px\\",
            },
            \\"@media (max-width: 640px)\\": {
              contentVisibility: \\"auto\\",
              containIntrinsicSize: \\"128px\\",
            },
          }}
        >
          <div
            css={{
              display: \\"flex\\",
              flexDirection: \\"column\\",
              alignItems: \\"stretch\\",
              flexShrink: \\"0\\",
              position: \\"relative\\",
              marginTop: \\"-1.65625px\\",
              textAlign: \\"center\\",
              lineHeight: \\"normal\\",
              height: \\"auto\\",
              fontSize: \\"24px\\",
              \\"@media (max-width: 991px)\\": {
                marginTop: \\"1.34375px\\",
                textAlign: \\"center\\",
              },
              \\"@media (max-width: 640px)\\": {
                fontSize: \\"25px\\",
              },
            }}
          >
            <p>Something Great to Say</p>
          </div>
          <div
            css={{
              display: \\"flex\\",
              flexDirection: \\"column\\",
              alignItems: \\"stretch\\",
              flexShrink: \\"0\\",
              position: \\"relative\\",
              marginTop: \\"14.59375px\\",
              textAlign: \\"center\\",
              lineHeight: \\"normal\\",
              height: \\"auto\\",
              fontSize: \\"15px\\",
              color: \\"rgba(86, 86, 86, 1)\\",
              \\"@media (max-width: 991px)\\": {
                textAlign: \\"center\\",
              },
              \\"@media (max-width: 640px)\\": {
                fontSize: \\"15px\\",
              },
            }}
          >
            <p>
              Some more great things to elaborate on that wonderful things you
              have to tell your audience
            </p>
          </div>
        </div>
      </Column>
      <Column width={}>
        <Image
          image=\\"https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F226d855cb0ee46e4a2c7baa6990c1118?width=998&height=1000\\"
          backgroundPosition=\\"center\\"
          backgroundSize=\\"cover\\"
          srcset=\\"https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F226d855cb0ee46e4a2c7baa6990c1118?width=100&height=1000 100w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F226d855cb0ee46e4a2c7baa6990c1118?width=200&height=1000 200w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F226d855cb0ee46e4a2c7baa6990c1118?width=400&height=1000 400w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F226d855cb0ee46e4a2c7baa6990c1118?width=800&height=1000 800w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F226d855cb0ee46e4a2c7baa6990c1118?width=1200&height=1000 1200w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F226d855cb0ee46e4a2c7baa6990c1118?width=1600&height=1000 1600w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F226d855cb0ee46e4a2c7baa6990c1118?width=2000&height=1000 2000w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F226d855cb0ee46e4a2c7baa6990c1118?width=998&height=1000 998w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F226d855cb0ee46e4a2c7baa6990c1118?width=638&height=1000 638w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F226d855cb0ee46e4a2c7baa6990c1118?width=376&height=1000 376w\\"
          sizes=\\"(max-width: 638px) 100vw, 27vw\\"
          aspectRatio={0.7004048582995948}
          lazy
          height={685}
          width={998}
          css={{
            display: \\"flex\\",
            flexDirection: \\"column\\",
            alignItems: \\"stretch\\",
            flexShrink: \\"0\\",
            position: \\"relative\\",
            textAlign: \\"center\\",
            lineHeight: \\"normal\\",
            height: \\"auto\\",
            \\"@media (max-width: 991px)\\": {
              contentVisibility: \\"auto\\",
              containIntrinsicSize: \\"699px\\",
            },
            \\"@media (max-width: 640px)\\": {
              contentVisibility: \\"auto\\",
              containIntrinsicSize: \\"447px\\",
            },
          }}
        />
        <div
          css={{
            display: \\"flex\\",
            flexDirection: \\"column\\",
            alignItems: \\"stretch\\",
            position: \\"relative\\",
            flexShrink: \\"0\\",
            boxSizing: \\"border-box\\",
            marginTop: \\"9px\\",
            marginBottom: \\"auto\\",
            paddingBottom: \\"17px\\",
            paddingTop: \\"17px\\",
            \\"@media (max-width: 991px)\\": {
              paddingBottom: \\"49px\\",
              contentVisibility: \\"auto\\",
              containIntrinsicSize: \\"92px\\",
            },
            \\"@media (max-width: 640px)\\": {
              contentVisibility: \\"auto\\",
              containIntrinsicSize: \\"128px\\",
            },
          }}
        >
          <div
            css={{
              display: \\"flex\\",
              flexDirection: \\"column\\",
              alignItems: \\"stretch\\",
              flexShrink: \\"0\\",
              position: \\"relative\\",
              marginTop: \\"-1.65625px\\",
              textAlign: \\"center\\",
              lineHeight: \\"normal\\",
              height: \\"auto\\",
              fontSize: \\"24px\\",
              \\"@media (max-width: 991px)\\": {
                marginTop: \\"1.34375px\\",
                textAlign: \\"center\\",
              },
              \\"@media (max-width: 640px)\\": {
                fontSize: \\"25px\\",
              },
            }}
          >
            <p>Something Great to Say</p>
          </div>
          <div
            css={{
              display: \\"flex\\",
              flexDirection: \\"column\\",
              alignItems: \\"stretch\\",
              flexShrink: \\"0\\",
              position: \\"relative\\",
              marginTop: \\"14.59375px\\",
              textAlign: \\"center\\",
              lineHeight: \\"normal\\",
              height: \\"auto\\",
              fontSize: \\"15px\\",
              color: \\"rgba(86, 86, 86, 1)\\",
              \\"@media (max-width: 991px)\\": {
                textAlign: \\"center\\",
              },
              \\"@media (max-width: 640px)\\": {
                fontSize: \\"15px\\",
              },
            }}
          >
            <p>
              Some more great things to elaborate on that wonderful things you
              have to tell your audience
            </p>
          </div>
        </div>
      </Column>
    </Columns>
  );
}

export default MyComponent;

"
`;

exports[`strips out builder components by default 1`] = `
"import * as React from \\"react\\";

function MyComponent(props) {
  return (
    <div
      stackColumnsAt=\\"tablet\\"
      space={36}
      reverseColumnsWhenStacked={false}
      css={{
        display: \\"flex\\",
        flexDirection: \\"column\\",
        alignItems: \\"stretch\\",
        position: \\"relative\\",
        flexShrink: \\"0\\",
        boxSizing: \\"border-box\\",
        marginTop: \\"2.34375px\\",
        paddingLeft: \\"0px\\",
        paddingRight: \\"0px\\",
      }}
    >
      <div
        css={{
          gap: \\"20px\\",
          display: \\"flex\\",
          \\"@media (max-width: 991px)\\": {
            flexDirection: \\"column\\",
            alignItems: \\"stretch\\",
            gap: \\"0px\\",
          },
        }}
      >
        <div
          css={{
            display: \\"flex\\",
            flexDirection: \\"column\\",
            alignItems: \\"stretch\\",
            lineHeight: \\"normal\\",
            width: \\"33%\\",
            marginLeft: \\"0px\\",
            \\"@media (max-width: 991px)\\": { width: \\"100%\\", marginLeft: 0 },
          }}
        >
          <img
            loading=\\"lazy\\"
            sizes=\\"(max-width: 638px) 100vw, 27vw\\"
            srcSet=\\"https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F8e096f01b00343dca3952d645f7ae024?width=100&height=1000 100w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F8e096f01b00343dca3952d645f7ae024?width=200&height=1000 200w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F8e096f01b00343dca3952d645f7ae024?width=400&height=1000 400w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F8e096f01b00343dca3952d645f7ae024?width=800&height=1000 800w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F8e096f01b00343dca3952d645f7ae024?width=1200&height=1000 1200w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F8e096f01b00343dca3952d645f7ae024?width=1600&height=1000 1600w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F8e096f01b00343dca3952d645f7ae024?width=2000&height=1000 2000w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F8e096f01b00343dca3952d645f7ae024?width=998&height=1000 998w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F8e096f01b00343dca3952d645f7ae024?width=638&height=1000 638w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F8e096f01b00343dca3952d645f7ae024?width=376&height=1000 376w\\"
            css={{
              aspectRatio: \\"1.43\\",
              objectFit: \\"cover\\",
              objectPosition: \\"center\\",
              width: \\"100%\\",
              alignItems: \\"stretch\\",
              flexShrink: \\"0\\",
              textAlign: \\"center\\",
              lineHeight: \\"normal\\",
              height: \\"auto\\",
            }}
          />
          <div
            css={{
              display: \\"flex\\",
              flexDirection: \\"column\\",
              alignItems: \\"stretch\\",
              position: \\"relative\\",
              flexShrink: \\"0\\",
              boxSizing: \\"border-box\\",
              marginTop: \\"9px\\",
              marginBottom: \\"auto\\",
              paddingBottom: \\"17px\\",
              paddingTop: \\"17px\\",
              \\"@media (max-width: 991px)\\": {
                paddingBottom: \\"49px\\",
              },
            }}
          >
            <div
              css={{
                display: \\"flex\\",
                flexDirection: \\"column\\",
                alignItems: \\"stretch\\",
                flexShrink: \\"0\\",
                position: \\"relative\\",
                marginTop: \\"-1.65625px\\",
                textAlign: \\"center\\",
                lineHeight: \\"normal\\",
                height: \\"auto\\",
                fontSize: \\"24px\\",
                \\"@media (max-width: 991px)\\": {
                  marginTop: \\"1.34375px\\",
                  textAlign: \\"center\\",
                },
                \\"@media (max-width: 640px)\\": {
                  fontSize: \\"25px\\",
                },
              }}
            >
              <p>Something Great to Say</p>
            </div>
            <div
              css={{
                display: \\"flex\\",
                flexDirection: \\"column\\",
                alignItems: \\"stretch\\",
                flexShrink: \\"0\\",
                position: \\"relative\\",
                marginTop: \\"14.59375px\\",
                textAlign: \\"center\\",
                lineHeight: \\"normal\\",
                height: \\"auto\\",
                fontSize: \\"15px\\",
                color: \\"rgba(86, 86, 86, 1)\\",
                \\"@media (max-width: 991px)\\": {
                  textAlign: \\"center\\",
                },
                \\"@media (max-width: 640px)\\": {
                  fontSize: \\"15px\\",
                },
              }}
            >
              <p>
                Some more great things to elaborate on that wonderful things you
                have to tell your audience
              </p>
            </div>
          </div>
        </div>
        <div
          css={{
            display: \\"flex\\",
            flexDirection: \\"column\\",
            alignItems: \\"stretch\\",
            lineHeight: \\"normal\\",
            width: \\"33%\\",
            marginLeft: \\"20px\\",
            \\"@media (max-width: 991px)\\": { width: \\"100%\\", marginLeft: 0 },
          }}
        >
          <img
            loading=\\"lazy\\"
            sizes=\\"(max-width: 638px) 100vw, 27vw\\"
            srcSet=\\"https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F70c33c597e9946e9a79ab99ad9a999d3?width=100&height=1000 100w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F70c33c597e9946e9a79ab99ad9a999d3?width=200&height=1000 200w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F70c33c597e9946e9a79ab99ad9a999d3?width=400&height=1000 400w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F70c33c597e9946e9a79ab99ad9a999d3?width=800&height=1000 800w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F70c33c597e9946e9a79ab99ad9a999d3?width=1200&height=1000 1200w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F70c33c597e9946e9a79ab99ad9a999d3?width=1600&height=1000 1600w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F70c33c597e9946e9a79ab99ad9a999d3?width=2000&height=1000 2000w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F70c33c597e9946e9a79ab99ad9a999d3?width=998&height=1000 998w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F70c33c597e9946e9a79ab99ad9a999d3?width=638&height=1000 638w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F70c33c597e9946e9a79ab99ad9a999d3?width=376&height=1000 376w\\"
            css={{
              aspectRatio: \\"1.43\\",
              objectFit: \\"cover\\",
              objectPosition: \\"center\\",
              width: \\"100%\\",
              alignItems: \\"stretch\\",
              flexShrink: \\"0\\",
              textAlign: \\"center\\",
              lineHeight: \\"normal\\",
              height: \\"auto\\",
              \\"@media (max-width: 991px)\\": {
                contentVisibility: \\"auto\\",
                containIntrinsicSize: \\"699px\\",
              },
            }}
          />
          <div
            css={{
              display: \\"flex\\",
              flexDirection: \\"column\\",
              alignItems: \\"stretch\\",
              position: \\"relative\\",
              flexShrink: \\"0\\",
              boxSizing: \\"border-box\\",
              marginTop: \\"9px\\",
              marginBottom: \\"auto\\",
              paddingBottom: \\"17px\\",
              paddingTop: \\"17px\\",
              \\"@media (max-width: 991px)\\": {
                paddingBottom: \\"49px\\",
                contentVisibility: \\"auto\\",
                containIntrinsicSize: \\"92px\\",
              },
              \\"@media (max-width: 640px)\\": {
                contentVisibility: \\"auto\\",
                containIntrinsicSize: \\"128px\\",
              },
            }}
          >
            <div
              css={{
                display: \\"flex\\",
                flexDirection: \\"column\\",
                alignItems: \\"stretch\\",
                flexShrink: \\"0\\",
                position: \\"relative\\",
                marginTop: \\"-1.65625px\\",
                textAlign: \\"center\\",
                lineHeight: \\"normal\\",
                height: \\"auto\\",
                fontSize: \\"24px\\",
                \\"@media (max-width: 991px)\\": {
                  marginTop: \\"1.34375px\\",
                  textAlign: \\"center\\",
                },
                \\"@media (max-width: 640px)\\": {
                  fontSize: \\"25px\\",
                },
              }}
            >
              <p>Something Great to Say</p>
            </div>
            <div
              css={{
                display: \\"flex\\",
                flexDirection: \\"column\\",
                alignItems: \\"stretch\\",
                flexShrink: \\"0\\",
                position: \\"relative\\",
                marginTop: \\"14.59375px\\",
                textAlign: \\"center\\",
                lineHeight: \\"normal\\",
                height: \\"auto\\",
                fontSize: \\"15px\\",
                color: \\"rgba(86, 86, 86, 1)\\",
                \\"@media (max-width: 991px)\\": {
                  textAlign: \\"center\\",
                },
                \\"@media (max-width: 640px)\\": {
                  fontSize: \\"15px\\",
                },
              }}
            >
              <p>
                Some more great things to elaborate on that wonderful things you
                have to tell your audience
              </p>
            </div>
          </div>
        </div>
        <div
          css={{
            display: \\"flex\\",
            flexDirection: \\"column\\",
            alignItems: \\"stretch\\",
            lineHeight: \\"normal\\",
            width: \\"33%\\",
            marginLeft: \\"20px\\",
            \\"@media (max-width: 991px)\\": { width: \\"100%\\", marginLeft: 0 },
          }}
        >
          <img
            loading=\\"lazy\\"
            sizes=\\"(max-width: 638px) 100vw, 27vw\\"
            srcSet=\\"https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F226d855cb0ee46e4a2c7baa6990c1118?width=100&height=1000 100w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F226d855cb0ee46e4a2c7baa6990c1118?width=200&height=1000 200w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F226d855cb0ee46e4a2c7baa6990c1118?width=400&height=1000 400w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F226d855cb0ee46e4a2c7baa6990c1118?width=800&height=1000 800w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F226d855cb0ee46e4a2c7baa6990c1118?width=1200&height=1000 1200w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F226d855cb0ee46e4a2c7baa6990c1118?width=1600&height=1000 1600w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F226d855cb0ee46e4a2c7baa6990c1118?width=2000&height=1000 2000w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F226d855cb0ee46e4a2c7baa6990c1118?width=998&height=1000 998w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F226d855cb0ee46e4a2c7baa6990c1118?width=638&height=1000 638w, https://cdn.builder.io/api/v1/image/assets%2FagZ9n5CUKRfbL9t6CaJOyVSK4Es2%2F226d855cb0ee46e4a2c7baa6990c1118?width=376&height=1000 376w\\"
            css={{
              aspectRatio: \\"1.43\\",
              objectFit: \\"cover\\",
              objectPosition: \\"center\\",
              width: \\"100%\\",
              alignItems: \\"stretch\\",
              flexShrink: \\"0\\",
              textAlign: \\"center\\",
              lineHeight: \\"normal\\",
              height: \\"auto\\",
              \\"@media (max-width: 991px)\\": {
                contentVisibility: \\"auto\\",
                containIntrinsicSize: \\"699px\\",
              },
              \\"@media (max-width: 640px)\\": {
                contentVisibility: \\"auto\\",
                containIntrinsicSize: \\"447px\\",
              },
            }}
          />
          <div
            css={{
              display: \\"flex\\",
              flexDirection: \\"column\\",
              alignItems: \\"stretch\\",
              position: \\"relative\\",
              flexShrink: \\"0\\",
              boxSizing: \\"border-box\\",
              marginTop: \\"9px\\",
              marginBottom: \\"auto\\",
              paddingBottom: \\"17px\\",
              paddingTop: \\"17px\\",
              \\"@media (max-width: 991px)\\": {
                paddingBottom: \\"49px\\",
                contentVisibility: \\"auto\\",
                containIntrinsicSize: \\"92px\\",
              },
              \\"@media (max-width: 640px)\\": {
                contentVisibility: \\"auto\\",
                containIntrinsicSize: \\"128px\\",
              },
            }}
          >
            <div
              css={{
                display: \\"flex\\",
                flexDirection: \\"column\\",
                alignItems: \\"stretch\\",
                flexShrink: \\"0\\",
                position: \\"relative\\",
                marginTop: \\"-1.65625px\\",
                textAlign: \\"center\\",
                lineHeight: \\"normal\\",
                height: \\"auto\\",
                fontSize: \\"24px\\",
                \\"@media (max-width: 991px)\\": {
                  marginTop: \\"1.34375px\\",
                  textAlign: \\"center\\",
                },
                \\"@media (max-width: 640px)\\": {
                  fontSize: \\"25px\\",
                },
              }}
            >
              <p>Something Great to Say</p>
            </div>
            <div
              css={{
                display: \\"flex\\",
                flexDirection: \\"column\\",
                alignItems: \\"stretch\\",
                flexShrink: \\"0\\",
                position: \\"relative\\",
                marginTop: \\"14.59375px\\",
                textAlign: \\"center\\",
                lineHeight: \\"normal\\",
                height: \\"auto\\",
                fontSize: \\"15px\\",
                color: \\"rgba(86, 86, 86, 1)\\",
                \\"@media (max-width: 991px)\\": {
                  textAlign: \\"center\\",
                },
                \\"@media (max-width: 640px)\\": {
                  fontSize: \\"15px\\",
                },
              }}
            >
              <p>
                Some more great things to elaborate on that wonderful things you
                have to tell your audience
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  );
}

export default MyComponent;

"
`;
